Modificar Tedto Vertebrados por Vertebrados ...

--- a/src/VertebradoFrame.form
+++ b/src/VertebradoFrame.form
@@ -68,7 +68,7 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="Vertebrados"/>
+        <Property name="text" type="java.lang.String" value="Vertebrados ..."/>
       </Properties>
     </Component>
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
